--- a/custom_components/local_openai/manifest.json
+++ b/custom_components/local_openai/manifest.json
@@ -1,13 +1,23 @@
 {
   "domain": "local_openai",
   "name": "Local OpenAI LLM",
-  "after_dependencies": ["assist_pipeline", "intent"],
-  "codeowners": ["@skyeharris"],
+  "after_dependencies": [
+    "assist_pipeline",
+    "intent"
+  ],
+  "codeowners": [
+    "@skyeharris"
+  ],
   "config_flow": true,
-  "dependencies": ["conversation"],
+  "dependencies": [
+    "conversation"
+  ],
   "documentation": "https://github.com/skye-harris/hass_local_openai_llm",
   "integration_type": "service",
   "iot_class": "local_polling",
-  "requirements": ["openai>=2.8.0", "demoji>=1.1.0", "webcolors>=24.8.0", "sentence-transformers>=5.2.0", "qdrant-client>=1.16.2"],
-  "version": "1.1.3"
+  "requirements": [
+    "openai>=2.8.0",
+    "demoji>=1.1.0"
+  ],
+  "version": "1.2.0"
 }
