--- a/custom_components/local_openai/services.yaml
+++ b/custom_components/local_openai/services.yaml
@@ -1,4 +1,6 @@
 add_to_weaviate:
+  name: Add data to Weaviate
+  description: Add or update object data in the Weaviate database connected to a Local AI Agent.
   target:
     entity:
       integration: local_openai
@@ -11,7 +13,6 @@ add_to_weaviate:
         Will be provided to the LLM as contextual information.
       required: true
       example: "Where is the cat (casey) food kept stored?"
-      default: ""
       selector:
         text:
     content:
@@ -21,7 +22,14 @@ add_to_weaviate:
         This content will not be matched against the users input term.
       required: true
       example: "The cat food is kept in the pantry - second shelf from the bottom"
-      default: ""
       selector:
         text:
           multiline: true
+    identifier:
+      name: Identifier
+      description: >
+        A unique identifier for this record. Can be used to update the record later on.
+      required: false
+      example: "Cat food location"
+      selector:
+        text:
